--- a/website/newsletter/186/index.mdx
+++ b/website/newsletter/186/index.mdx
@@ -82,9 +82,9 @@ It is worth mentioning that the React team always had in mind to have a compiler
 
 ---
 
-[![Merging Remix and React Router](/emails/issues/186/remix.jpg)](https://remix.run/blog/merging-remix-and-react-router#whats-happening-to-remix)
+[![Merging Remix and React Router](/emails/issues/186/remix.jpg)](https://remix.run/blog/merging-remix-and-react-router)
 
-**[Merging Remix and React Router](https://remix.run/blog/merging-remix-and-react-router#whats-happening-to-remix)**
+**[Merging Remix and React Router](https://remix.run/blog/merging-remix-and-react-router)**
 
 This is another big announcement from React Conf. Remix and React Router have converged so much (thanks to the Vite plugin and SPA mode) that it doesn’t really make sense anymore to keep both. Technically, instead of shipping Remix v3, they plan to add an optional Vite plugin to React Router v7, which will remain retro-compatible, and also bring new features (RSC, server-actions, static pre-rendering…). See also the follow-up post [Incremental Path to React 19: React Conf Follow-Up](https://remix.run/blog/incremental-path-to-react-19).
 
@@ -158,7 +158,6 @@ React Conf is officially behind us, and I hope you had a chance to look at the r
 - 📦 [Bootsplash v6 beta - Expo plugin, simpler setup](https://github.com/zoontek/react-native-bootsplash/pull/578): The React Conf app used it for splash screen!
 - 📦 [React Conf app open-sourced](https://github.com/expo/react-conf-app): Already uses React Compiler ([Tweet](https://x.com/kadikraman/status/1791155001882275989))
 - 🎙️ [RNR 297 - Jumping over the React Native v0.74 Bridge](https://reactnativeradio.com/episodes/rnr-297-jumping-over-the-react-native-v074-bridge)
-- 🎥 [Build a ChatGPT Clone with React Native (Expo, SQLite, RevenueCat, Clerk, OpenAI)](https://www.youtube.com/watch?v=8ztx68SUOQo)
 - 🎥 [Supercharging your React Native app for Windows](https://www.youtube.com/watch?v=4sbAvwukSWM): React Native session at MS Build 2024
 
 ---
