--- a/website/newsletter/186/index.mdx
+++ b/website/newsletter/186/index.mdx
@@ -178,4 +178,8 @@ React Conf is officially behind us, and I hope you had a chance to look at the r
 
 [![alt](/emails/issues/186/meme.jpg)](https://x.com/rauchg/status/1791163745307328650)
 
+[![alt](/emails/issues/186/meme2.jpg)](https://x.com/sebastienlorber/status/1790796662153117863)
+
+(Ok that Compiler one is not technically accurate, but still fun 😇)
+
 See ya! 👋
