--- a/website/newsletter/186/index.mdx
+++ b/website/newsletter/186/index.mdx
@@ -7,7 +7,7 @@ date: 05-22-2024
 
 Hi everyone!
 
-This has been a busy week for us 😄. That React conf didn't disappoint! We weren't there (but [our flyer was](https://x.com/sebastienlorber/status/1790771155734839313) 😇). We not only had great conf announcements (notably the compiler!), but we had great community articles that I had to postpone a few of them to next week.
+This has been a busy week for us 😄. That React conf didn't disappoint! We weren't there, but [our flyer was](https://x.com/sebastienlorber/status/1790771155734839313) 😇. We not only had great conf announcements (notably the compiler!), but we had great community articles that I had to postpone a few of them to next week.
 
 Although it's unlikely to calm down because 2 major confs start tomorrow:
 
@@ -180,6 +180,6 @@ React Conf is officially behind us, and I hope you had a chance to look at the r
 
 [![alt](/emails/issues/186/meme2.jpg)](https://x.com/sebastienlorber/status/1790796662153117863)
 
-(Ok that Compiler one is not technically accurate, but still fun 😇)
+(Ok that React Compiler one is not technically accurate, but still fun 😇 sorry Compiler team)
 
 See ya! 👋
