--- a/website/newsletter/187/index.mdx
+++ b/website/newsletter/187/index.mdx
@@ -56,7 +56,7 @@ Ready to take your development to the next level? Make React-admin your go-to fr
 
 The latest tutorial with WorkOS and Sam Selikoff shows how you can easily add AuthKit's hosted login box to a Next.js app:  
   
-📚 Get started using the Authkit <> Next.js [integration library](https://github.com/workos/authkit-nextjs)  
+📚 Get started using the Authkit \<> Next.js [integration library](https://github.com/workos/authkit-nextjs)  
 🤖 Set up environment variables, configure the callback route and middleware, and implement signIn and signOut functionalities  
 ⚙️ Protect routes in the Next.js app from unauthenticated users with the getUser function
 
