--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/186/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/186/index.mdx
@@ -7,16 +7,16 @@ date: 05-22-2024
 
 Salut à tous !
 
-This has been a busy week for us 😄. That React conf didn't disappoint! We weren't there, but [our flyer was](https://x.com/sebastienlorber/status/1790771155734839313) 😇. We not only had great conf announcements (notably the compiler!), but we had great community articles that I had to postpone a few of them to next week.
+La semaine a été très chargée pour nous 😄. La conférence React n'a pas déçu ! Nous n'y étions pas, mais [notre flyer y était](https://x.com/sebastienlorber/status/1790771155734839313) 😇. Non seulement nous avons eu de belles annonces de conf (notamment le compilateur !), mais nous avons eu de beaux articles de la communauté que j'ai dû reporter à la semaine prochaine pour certains d'entre eux.
 
-Although it's unlikely to calm down because 2 major confs start tomorrow:
+Bien qu'il soit peu probable que cela se calme car 2 confs majeures commencent demain :
 
-- Vercel Ship, during which [Next.js 15 should be announced](https://x.com/feedthejim/status/1792969159321723244) with a less aggressive caching strategy, Turborepo in dev, Compiler support and more.
-- App.js Conf, also with great React Native announcements expected.
+- Vercel Ship, durant laquelle [Next.js 15 devrait être annoncé](https://x.com/feedthejim/status/1792969159321723244) avec une stratégie de cache moins agressive, Turborepo en développement, la prise en charge du compilateur et plus encore.
+- App.js Conf, avec également de grandes annonces pour React Native.
 
-Have a good read and see you next week!
+Bonne lecture et à la semaine prochaine !
 
-*   🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) -  Portland, OR - July 17-19. The U.S. React Native Conference is back with engaging talks and hands-on workshops! Get 15% off your ticket with code “TWIR”
+*   🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) -  Portland, OR - Du 17 au 19 juillet. La conférence américaine React Native est de retour avec des conférences captivantes et des ateliers pratiques ! Bénéficiez de 15% de réduction sur votre billet avec le code « TWIR »
 
 <!-- truncate -->
 
@@ -50,16 +50,16 @@ Ready to take your development to the next level? Make React-admin your go-to fr
 
 **[React Conf 2024 Recap](https://react.dev/blog/2024/05/22/react-conf-2024-recap)**
 
-The React team published a recap blog post of React Conf, just in time for today’s newsletter 🤗. It presents all the talks and the main announcements. I haven't seen all of them yet, but my highlights so far are:
+L'équipe React a publié un article de blog récapitulatif de la React Conf, juste à temps pour la newsletter d'aujourd'hui 🤗. Il présente tous les conférences et les principales annonces. Je ne les ai pas encore toutes vues, mais mes points forts pour l'instant sont :
 
-- React 19 is in RC, and a stable release is expected in the next few weeks
-- The React Compiler is out and looks really powerful
-- Universal React Server Components are coming to Expo and the demo is really impressive
-- Remix and React Router are merging. Remix v3 will finally be React Router v7.
-- The Real-time React Server Components demo makes RSCs stateful and opens new possibilities that remind me of Phoenix LiveView
-- React now coordinates HTML tags, which is hugely underrated
+- React 19 est en RC, et une version stable est attendue dans les prochaines semaines
+- Le compilateur React est sorti et semble vraiment puissant
+- Les Universal React Server Components arrivent sur Expo et la démo est vraiment impressionnante
+- Remix et React Router fusionnent. Remix v3 sera finalement React Router v7.
+- La démo Real-time React Server Components rend les RSC stateful et ouvre de nouvelles possibilités qui me rappellent Phoenix LiveView
+- React coordonne maintenant les balises HTML, ce qui est extrêmement sous-estimé.
 
-Again these are just my personal favorites. We already covered most React 19 features in the newsletter, and the [React 19 beta blog post](https://react.dev/blog/2024/04/25/react-19) remains the reference for discovering all the new features coming in the next major version.
+Encore une fois, il ne s'agit que de mes favoris personnels. Nous avons déjà couvert la plupart des fonctionnalités de React 19 dans la newsletter, et [l'article du blog de React 19 beta](https://react.dev/blog/2024/04/25/react-19) reste la référence pour découvrir toutes les nouvelles fonctionnalités à venir dans la prochaine version majeure.
 
 ---
 
