--- a/website/newsletter/187/index.mdx
+++ b/website/newsletter/187/index.mdx
@@ -155,6 +155,7 @@ The dry season of everyone saving their announcements for upcoming conferences i
 - 📦 [Angular 18.0 - Zoneless, Material 3, deferrable views…](https://blog.angular.dev/angular-v18-is-now-available-e79d5ac0affe)
 - 📦 [TypeScript-ESLint v8 beta - ESLint 9 support](https://typescript-eslint.io/blog/announcing-typescript-eslint-v8-beta/)
 - 📦 [fnm 1.36 - fast Node.js version manager](https://github.com/Schniz/fnm/releases/tag/v1.36.0)
+- 📦 [rsbuild 0.7](https://rsbuild.dev/community/releases/v0-7)
 
 ---
 
