--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/186/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/186/index.mdx
@@ -67,17 +67,17 @@ Encore une fois, il ne s'agit que de mes favoris personnels. Nous avons déjà c
 
 **[The React Compiler is out](https://react.dev/learn/react-compiler)**
 
-The compiler probably deserves its own section right. TLDR: the compiler optimizes your existing code automatically and gives you fine-grained reactivity using regular JS values. Try the [React Compiler Playground](https://playground.react.dev/#N4Igzg9grgTgxgUxALhAgHgBwjALgAgBMEAzAQygBsCSoA7OXASwjvwFkBPAQU0wAoAlPmAAdNvhgJcsNgB5CTAG4A+ABIJKlCPgDqOSoTkB6RaoDc4gL7iQVoA) to see how it works, and understand how it optimizes your code.
+Le compilateur mérite probablement sa propre section. TLDR : le compilateur optimise votre code existant automatiquement et vous donne une réactivité fine en utilisant des valeurs JS standard. Essayez le [React Compiler Playground](https://playground.react.dev/#N4Igzg9grgTgxgUxALhAgHgBwjALgAgBMEAzAQygBsCSoA7OXASwjvwFkBPAQU0wAoAlPmAAdNvhgJcsNgB5CTAG4A+ABIJKlCPgDqOSoTkB6RaoDc4gL7iQVoA) pour voir comment il fonctionne et comprendre comment il optimise votre code.
 
-It has been successfully rolled out on Instagram web with great results (2.5x faster interactions). It statically analyses your code, one file at a time, and memoizes what can safely be optimized, with even greater granularity than you could do by hand. If you follow the Rules of React, you shouldn’t need to rewrite any code. The ESLint plugin tells you about problematic code that the compiler detects. It does not play well with proxy-based solutions like MobX. Configuration options and opt-in/out directives enable you to try the compiler gradually on your codebase.
+Il a été déployé avec succès sur le web d'Instagram avec de très bons résultats (les interactions sont 2,5 fois plus rapides). Il analyse statiquement votre code, un fichier à la fois, et mémorise ce qui peut être optimisé en toute sécurité, avec une granularité encore plus grande que ce que vous pourriez faire à la main. Si vous suivez les règles de React, vous ne devriez pas avoir à réécrire de code. Le plugin ESLint vous informe sur le code problématique détecté par le compilateur. Il ne fonctionne pas bien avec les solutions basées sur un proxy comme MobX. Les options de configuration et les directives opt-in/out vous permettent d'essayer progressivement le compilateur sur votre base de code.
 
-The compiler is initially written in TypeScript and ships with Babel bindings, but don’t be disappointed because its logic is decoupled. Support for SWC should come next, and we’ll probably have a port in Rust a bit later (they already made a POC for that to ensure it’s feasible).
+Le compilateur est initialement écrit en TypeScript et livré avec des bindings Babel, mais ne soyez pas déçus car sa logique est découplée. Le support de SWC devrait venir ensuite, et nous aurons probablement un portage en Rust un peu plus tard (ils ont déjà fait un POC pour cela afin de s'assurer que c'est faisable).
 
-It is worth mentioning that the React team always had in mind to have a compiler for React (see [Andrew Clark’s thread](https://x.com/acdlite/status/1792710362745405911)). And this is only the beginning, they now have the infrastructure to build even more powerful things. I’m pretty sure sooner or later we won’t need anymore a dependency array, and that the compiler will be able to optimize fine-grained context consumption ([relevant tweet](https://x.com/TkDodo/status/1741193371283026422)).
+Il convient de mentionner que l'équipe React a toujours eu à l'esprit d'avoir un compilateur pour React (voir [le thread d'Andrew Clark](https://x.com/acdlite/status/1792710362745405911)). Et ce n'est que le début, ils ont maintenant l'infrastructure pour construire des choses encore plus puissantes. Je suis presque sûr que tôt ou tard, nous n'aurons plus besoin d'un tableau de dépendance, et que le compilateur sera capable d'optimiser la consommation de contexte à un niveau fin ([tweet pertinent](https://x.com/TkDodo/status/1741193371283026422)).
 
-🔗 **Related resources worth checking:**
+🔗 **Ressources associées qui valent la peine d'être consultées :**
 
-- 📜 [React Compiler With React 18](https://jherr2020.medium.com/react-compiler-with-react-18-1e39f60ae71a): The compiler is not a React 19 feature. Jack shows a POC of using it under React 18 by providing a very simple compiler runtime hook. Lauren from the React Compiler team just confirmed it’s ok to do so and provided an [official polyfill](https://github.com/reactwg/react-compiler/discussions/6) that you can use temporarily, although it’s recommended to upgrade to React 19.
+- 📜 [React Compiler With React 18](https://jherr2020.medium.com/react-compiler-with-react-18-1e39f60ae71a) : Le compilateur n'est pas une fonctionnalité de React 19. Jack montre un POC pour l'utiliser sous React 18 en fournissant un hook trés simple d'exécution du compilateur. Lauren de l'équipe React Compiler vient de confirmer que c'est possible et a fourni un [polyfill officiel](https://github.com/reactwg/react-compiler/discussions/6) que vous pouvez utiliser temporairement, bien qu'il soit recommandé de passer à React 19.
 - 🎥 [Jack Herrington - React Compiler: In-Depth Beyond React Conf 2024](https://www.youtube.com/watch?v=PYHBHK37xlE)
 - 🎥 [Theo - React Just Changed Forever](https://www.youtube.com/watch?v=DhfeXfF_W4w)
 - 🧵 [Theo - Clearing up some React Compiler misunderstandings](https://x.com/t3dotgg/status/1791177359896555600)
@@ -88,23 +88,23 @@ It is worth mentioning that the React team always had in mind to have a compiler
 
 **[Merging Remix and React Router](https://remix.run/blog/merging-remix-and-react-router)**
 
-This is another big announcement from React Conf. Remix and React Router have converged so much (thanks to the Vite plugin and SPA mode) that it doesn’t really make sense anymore to keep both. Technically, instead of shipping Remix v3, they plan to add an optional Vite plugin to React Router v7, which will remain retro-compatible, and also bring new features (RSC, server-actions, static pre-rendering…). See also the follow-up post [Incremental Path to React 19: React Conf Follow-Up](https://remix.run/blog/incremental-path-to-react-19).
+C'est une autre grande annonce de React Conf. Remix et React Router ont tellement convergé (grâce au plugin Vite et au mode SPA) qu'il n'est plus vraiment logique de conserver les deux. Techniquement, au lieu de livrer Remix v3, ils prévoient d'ajouter un plugin Vite optionnel à React Router v7, qui restera rétro-compatible, et apportera également de nouvelles fonctionnalités (RSC, server-actions, pré-rendering statique...). Voir aussi l'article de suivi [Incremental Path to React 19 : React Conf Follow-Up](https://remix.run/blog/incremental-path-to-react-19).
 
 ---
 
 - 💸 [Conversational AI and context-aware LLM chat with React](https://nlux.dev/?utm_source=twir-m24-2)
-- 📜 [React 19 lets you write impossible components](https://www.mux.com/blog/react-19-server-components-and-actions): A great article from Mux that adopted RSCs early, explaining that we only scratched the surface of the new patterns RSCs enable. The changelog pagination example is cool and shows that even libraries like React Query might become less useful.
-- 📜 [Introducing Pigment CSS: the next generation of CSS-in-JS](https://mui.com/blog/introducing-pigment-css/): the MUI team explains the motivations to create their own in-house CSS-in-JS solution, built on top of the WyW-in-JS toolkit, that should power MUI v6 later this year. It is compatible with RSCs. The adoption for MUI/Emotion/StyledComponent users should be easy.
-- 📜 [Digging for SSRF in NextJS apps](https://www.assetnote.io/resources/research/digging-for-ssrf-in-nextjs-apps): Security researchers explain blind Server Side Request Forgery vulnerabilities they found in Next.js related to the Image component and Server Actions implementations. Those vulnerabilities have been patched since Next.js 14.1.1 already (January 2024).
-- 📜 [Prefer Multiple Compositions](https://kyleshevlin.com/prefer-multiple-compositions/): If your component has a finite set of cases to handle, it will be more maintainable to have clear separate if/else branches for each cases rather than spreading conditionals everywhere in JSX.
-- 📜 [Prefer Noun-Adjective Naming](https://kyleshevlin.com/prefer-noun-adjective-naming/): I also prefer to name a component “ButtonPrimary” instead of “PrimaryButton”. Related things remain grouped alphabetically, and are easier to lookup in the IDE.
-- 📜 [Inline Styles on Steroids](https://weser.io/blog/inline-styles-on-steroids): With projects such as CSS Hooks, and the web platform planning to add support for inline style nesting, it’s only a matter of time until inline styles make a huge comeback. The author of Fela recreates the DX of a good CSS-in-JS library on top of CSS Hooks thanks to 2 new projects he’s working on.
-- 📜 [Quantifying the Impact of Styled Components on Server Response Times](https://blog.levineandrew.com/quantifying-the-impact-of-styled-components-on-server-response-times): Uses SpeedScope (more powerful than Chrome DevTools) to analyze a CPU trace and concludes that style injection takes 47% of SSR time.
-- 📜 [Storybook - Portable stories for Playwright Component Tests](https://storybook.js.org/blog/portable-stories-for-playwright-ct/): Although Storybook provides a play() function using a Playwright test runner, you might still want to use Playwright Component testing directly, and reuse your existing stories there.
-- 📜 [Deploying Remix to Cloudflare with SST](https://ruanmartinelli.com/blog/remix-sst-cloudflare): Using SST to deploy your app to a major cloud can be a nice alternative to DX platforms like Vercel/Netlify. TIL that it’s so simple to use, and it also supports deploying to Cloudflare.
-- 📦 [Restyle](https://reactstyle.vercel.app/): New CSS-in-JS library compatible with RSC that’s leveraging the brand-new style hoisting and deduplication feature of React 19. Those new React primitives were also designed with CSS-in-JS libs in mind, and it’s great to see the community already leveraging them. It’s also interesting for distributing CSS as part of a React library npm package.
-- 📦 [React Google Maps 1.0](https://mapsplatform.google.com/resources/blog/google-maps-platform-graduates-react-integration-library-to-1-0/): The official Google Maps library for React is now stable, maintained by the OpenJS Foundation.
-- 📦 [Million Lint 1.0-rc](https://million.dev/blog/lint-rc): IDE extension that automatically finds and fixes performance issues for you. Unlike the React compiler, it is based on runtime analysis and can detect additional performance problems that the compiler can’t. Both can be used in tandem.
+- 📜 [React 19 lets you write impossible components](https://www.mux.com/blog/react-19-server-components-and-actions) : Un excellent article de Mux qui a adopté les RSC très tôt, expliquant que nous n'avons fait qu'effleurer la surface des nouveaux modèles que les RSC permettent. L'exemple de la pagination du changelog est intéressant et montre que même des bibliothèques comme React Query pourraient devenir moins utiles.
+- 📜 [Introducing Pigment CSS: the next generation of CSS-in-JS](https://mui.com/blog/introducing-pigment-css/) : L'équipe MUI explique les raisons qui l'ont poussée à créer sa propre solution CSS-in-JS, basée sur la boîte à outils WyW-in-JS, qui devrait équiper MUI v6 dans le courant de l'année. Cette solution est compatible avec les RSC. L'adoption par les utilisateurs de MUI/Emotion/StyledComponent devrait être facile.
+- 📜 [Digging for SSRF in NextJS apps](https://www.assetnote.io/resources/research/digging-for-ssrf-in-nextjs-apps) : Des chercheurs en sécurité expliquent les vulnérabilités aveugles de Server Side Request Forgery qu'ils ont trouvées dans Next.js liées au composant Image et aux implémentations Server Actions. Ces vulnérabilités ont été corrigées depuis Next.js 14.1.1 (janvier 2024).
+- 📜 [Prefer Multiple Compositions](https://kyleshevlin.com/prefer-multiple-compositions/) : Si votre composant a un ensemble fini de cas à traiter, il sera plus facile à maintenir en ayant des branches if/else clairement séparées pour chaque cas plutôt que de disperser des conditionnelles partout dans JSX.
+- 📜 [Prefer Noun-Adjective Naming](https://kyleshevlin.com/prefer-noun-adjective-naming/) : Je préfère également nommer un composant « ButtonPrimary » plutôt que « PrimaryButton ». Les éléments apparentés restent groupés par ordre alphabétique et sont plus faciles à retrouver dans l'IDE.
+- 📜 [Inline Styles on Steroids](https://weser.io/blog/inline-styles-on-steroids) : Avec des projets tels que CSS Hooks, et la plateforme web qui prévoit d'ajouter un support pour l'imbrication des styles en ligne, ce n'est qu'une question de temps avant que les styles en ligne ne fassent un retour en force. L'auteur de Fela recrée la DX d'une bonne bibliothèque CSS-in-JS au-dessus de CSS Hooks grâce à deux nouveaux projets sur lesquels il travaille.
+- 📜 [Quantifying the Impact of Styled Components on Server Response Times](https://blog.levineandrew.com/quantifying-the-impact-of-styled-components-on-server-response-times) : Utilise SpeedScope (plus puissant que Chrome DevTools) pour analyser une trace CPU et conclut que l'injection de style prend 47% du temps SSR.
+- 📜 [Storybook - Portable stories for Playwright Component Tests](https://storybook.js.org/blog/portable-stories-for-playwright-ct/) : Bien que Storybook fournisse une fonction play() à l'aide d'un exécuteur de tests Playwright, vous préférerez peut-être utiliser directement les tests de composants Playwright et réutiliser vos stories existantes à cet endroit.
+- 📜 [Deploying Remix to Cloudflare with SST](https://ruanmartinelli.com/blog/remix-sst-cloudflare) : L'utilisation de SST pour déployer votre application sur un cloud majeur peut être une alternative intéressante aux plateformes DX comme Vercel/Netlify. La simplicité d'utilisation et la possibilité de déployer vers Cloudflare en font une alternative intéressante.
+- 📦 [Restyle](https://reactstyle.vercel.app/) : Nouvelle bibliothèque CSS-in-JS compatible avec RSC qui exploite la toute nouvelle fonctionnalité de déduplication et d'extraction de style de React 19. Ces nouvelles primitives React ont également été conçues en pensant aux librairies CSS-in-JS, et il est formidable de voir que la communauté les utilise déjà. C'est également intéressant pour la distribution de CSS dans le cadre d'un package npm de bibliothèque React.
+- 📦 [React Google Maps 1.0](https://mapsplatform.google.com/resources/blog/google-maps-platform-graduates-react-integration-library-to-1-0/) : La bibliothèque officielle Google Maps pour React est désormais stable, maintenue par la fondation OpenJS.
+- 📦 [Million Lint 1.0-rc](https://million.dev/blog/lint-rc) : Extension IDE qui trouve et corrige automatiquement les problèmes de performance pour vous. Contrairement au compilateur React, il est basé sur l'analyse du temps d'exécution et peut détecter des problèmes de performance supplémentaires que le compilateur ne peut pas détecter. Les deux peuvent être utilisés en tandem.
 - 📦 [Zustand 5.0-beta - Upgrade guide available - drop deprecated features, upgrades React/TS](https://github.com/pmndrs/zustand/blob/v5/docs/guides/migrating-to-v5.mdx)
 - 📦 [Storybook 8.1 - tag filtering, typesafe mocking, beforeEach, portable stories API](https://github.com/storybookjs/storybook/releases/tag/v8.1.0)
 - 📦 [Storybook-Rsbuild - Storybook builder powered by Rsbuild](https://github.com/rspack-contrib/storybook-rsbuild)
@@ -137,30 +137,30 @@ Cette section est rédigée par [Benedikt](https://twitter.com/bndkt).
 
 ![](/emails/issues/186/ursc.jpg)
 
-React Conf is officially behind us, and I hope you had a chance to look at the recordings of the awesome presentations on YouTube. My biggest meta-takeaway was just how much RN content there was in the conference! As RN is very much developed out in the open and in collaboration with the whole community, there were no surprising “big announcements,” but it was a very good summary of the current state of RN and an outlook on the road ahead. The most impressive and inspiring part for me was Evan Bacon’s vision for Universal React Server Components, which he presented using an absolute killer demo that I’m urging you to [watch for yourself](https://www.youtube.com/watch?v=T8TZQ6k4SLE&t=20765s). I’ve put my main takeaways into some bullet points for you:
+React Conf est officiellement derrière nous, et j'espère que vous avez eu l'occasion de regarder les enregistrements des superbes présentations sur YouTube. Ce que j'ai retenu de cette conférence, c'est la quantité de contenu RN qu'elle contenait ! Étant donné que RN est développé de manière très ouverte et en collaboration avec l'ensemble de la communauté, il n'y a pas eu de « grandes annonces » surprenantes, mais il s'agissait d'un très bon résumé de l'état actuel de RN et d'une vision sur le chemin à parcourir. La partie la plus impressionnante et la plus inspirante pour moi a été la vision d'Evan Bacon pour les Universal React Server Components, qu'il a présentée à l'aide d'une démo absolument géniale que je vous conseille vivement de [regarder par vous-même](https://www.youtube.com/watch?v=T8TZQ6k4SLE&t=20765s). J'ai rassemblé mes principales conclusions en quelques points pour vous :
 
-- RN is thriving: Over 2M weekly downloads of RN now, 30 shipped versions of RN in 2024 so far
-- The new Architecture is now in Beta
-- Expo is now officially recommended for all new apps
-- New reactnative.dev landing page launched
-- React Conf app is open source
-- Expo’s vision for Universal RSC
+- RN est en plein essor : Plus de 2 millions de téléchargements hebdomadaires de RN, 30 versions de RN livrées en 2024 à ce jour.
+- La nouvelle Architecture est maintenant en Bêta
+- Expo est maintenant officiellement recommandé pour toutes les nouvelles applications
+- Lancement de la nouvelle page reactnative.dev
+- L'application React Conf est open source
+- La vision d'Expo pour Universal RSC
 
 ---
 
 - 💸 [PowerSync - Supabase \<> SQLite sync layer: follow our step-by-step video integration guide.](https://docs.powersync.com/integration-guides/supabase-+-powersync?utm_source=newsletter&utm_medium=sponsorship&utm_campaign=this-week-in-react)
 - 👀 [New React Native landing page](https://reactnative.dev/)
-- 🐦 [New resources to get started with React Native and Expo](https://x.com/jonsamp/status/1791164393893609705): New landing page, new "Getting Started" docs, new Expo dev environment setup docs
-- 🐦 [Interesting discussion on Apple's stance on server-driven UI in iOS apps](https://x.com/sregg/status/1791784335999160783): Will Universal RSC be a challenge in Apple’s App Store approval process?
-- 🐦 [Potential ways to decrease Android bundle size](https://x.com/mironcatalin/status/1792485000559935571): Two settings can significantly decrease bundle size, but - as always - this comes with trade-offs.
-- 🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) - Portland, OR - July 17-19. The U.S. React Native Conference is back with engaging talks and hands-on workshops! Get 15% off your ticket with code “TWIR”
-- 📜 [Debunk ideas on cross-platform framework](https://www.bam.tech/article/debunk-ideas-on-cross-platform-framework): Performance, Security, Accessibility, Stability, App Store acceptance, Native Features - all of these are sometimes mistakenly doubted when it comes to cross-platform apps.
+- 🐦 [New resources to get started with React Native and Expo](https://x.com/jonsamp/status/1791164393893609705) : Nouvelle page d'accueil, nouvelle documentation "Getting Started", nouvelle documentation sur la configuration de l'environnement Expo dev.
+- 🐦 [Interesting discussion on Apple's stance on server-driven UI in iOS apps](https://x.com/sregg/status/1791784335999160783) : L'Universal RSC sera-t-il un défi dans le processus d'approbation de l'App Store d'Apple ?
+- 🐦 [Potential ways to decrease Android bundle size](https://x.com/mironcatalin/status/1792485000559935571) : Deux paramétrages permettent de réduire considérablement la taille de bundle, mais - comme toujours - cela s'accompagne de compromis.
+- 🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) - Portland, OR - Du 17 au 19 juillet. La conférence américaine React Native est de retour avec des conférences captivantes et des ateliers pratiques ! Bénéficiez de 15% de réduction sur votre billet avec le code « TWIR »
+- 📜 [Debunk ideas on cross-platform framework](https://www.bam.tech/article/debunk-ideas-on-cross-platform-framework) : Performances, sécurité, accessibilité, stabilité, acceptation par l'App Store, fonctionnalités natives : tous ces éléments sont parfois mis en doute à tort lorsqu'il s'agit d'applications multiplateformes.
 - 📜 [Breaking down react-native-video 6.0.0 stable release - enhancements and comparisons](https://www.thewidlarzgroup.com/blog/breaking-down-react-native-video-6-0-0-stable-release-enhancements-and-comparisons)
 - 📜 [Creating Custom Fonts with React-Native-Skia](https://gitstashapply.medium.com/creating-custom-fonts-with-react-native-skia-4851d8b14ddd)
-- 📦 [Bootsplash v6 beta - Expo plugin, simpler setup](https://github.com/zoontek/react-native-bootsplash/pull/578): The React Conf app used it for splash screen!
-- 📦 [React Conf app open-sourced](https://github.com/expo/react-conf-app): Already uses React Compiler ([Tweet](https://x.com/kadikraman/status/1791155001882275989))
+- 📦 [Bootsplash v6 beta - Expo plugin, simpler setup](https://github.com/zoontek/react-native-bootsplash/pull/578) : L'application React Conf l'a utilisé pour l'écran d'accueil !
+- 📦 [React Conf app open-sourced](https://github.com/expo/react-conf-app) : Utilise déjà React Compiler ([Tweet](https://x.com/kadikraman/status/1791155001882275989))
 - 🎙️ [RNR 297 - Jumping over the React Native v0.74 Bridge](https://reactnativeradio.com/episodes/rnr-297-jumping-over-the-react-native-v074-bridge)
-- 🎥 [Supercharging your React Native app for Windows](https://www.youtube.com/watch?v=4sbAvwukSWM): React Native session at MS Build 2024
+- 🎥 [Supercharging your React Native app for Windows](https://www.youtube.com/watch?v=4sbAvwukSWM) : Session React Native à la MS Build 2024
 
 ---
 
@@ -190,6 +190,6 @@ React Conf is officially behind us, and I hope you had a chance to look at the r
 
 [![alt](/emails/issues/186/meme2.jpg)](https://x.com/sebastienlorber/status/1790796662153117863)
 
-(Ok that React Compiler one is not technically accurate, but still fun 😇 sorry Compiler team)
+(Ok celle de React Compiler n'est pas techniquement exacte, mais quand même amusante 😇 désolé l'équipe de Compiler)
 
 A plus 👋
