--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/187/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/187/index.mdx
@@ -152,7 +152,7 @@ The dry season of everyone saving their announcements for upcoming conferences i
 
 - 🇫🇷 [ReactHebdo.fr - Dernières éditions traduites en français](https://thisweekinreact.com/fr/newsletter)
 - 📜 [Le relais client-serveur avec SWR​](https://www.formationnextjs.fr/ressources/relais-client-serveur)
-- 📜 [Le composant Next.js <Image>​](https://www.premieroctet.com/blog/next-image-component)
+- 📜 [Le composant Image de Next.js​](https://www.premieroctet.com/blog/next-image-component)
 - 🎥 [7 Questions React a absolument savoir pour ton entretien​](https://www.youtube.com/watch?v=yzU1-oKcYac)
 - 🎥 [Actus JS de mai 2024 - Headless UI, SolidStart, Angular 18](https://www.youtube.com/watch?v=003zAH0JDr4)
 
