fix authors + truncate marker

--- a/website/newsletter/185/index.mdx
+++ b/website/newsletter/185/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /185
 title: "This Week In React #185: React Conf, useDeferredValue, React Query, refs, Next.js after, mini-react, Astro, MDXTS, Radix, Solid, Redwood, Pigment, Apollo, Playwright, Re.Pack, RN-Model3D, RN perf, RN Video, VisionOS, LiveView, Anchor Positioning ..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 05-15-2024
 ---
 
@@ -20,6 +20,8 @@ The [React Conf YouTube live stream link](https://www.youtube.com/watch?v=T8TZQ6
 - Cross Platform React - Olga Zinoveva and Naman Goel - Meta
 
 Speaking of conferences, the U.S. React Native Conference [**Chain React**](https://chainreactconf.com/?utm_source=thisweekinreact) is back on July 17-19 (Portland/OR). We partnered to offer you 15% off your ticket with code “TWIR”.
+
+<!-- truncate -->
 
 **💡 [Check this newsletter on Twitter](https://slo.im/thread) - visual format 🎨**
 
