--- a/website/newsletter/186/index.mdx
+++ b/website/newsletter/186/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /186
 title: "This Week In React #186: React Conf, Compiler, Universal RSC, React-Router, Google Maps, Million Lint, Pigment, Restyle, Storybook, SSRF, Inline Styles, New Arch, Expo, Bootsplash, Skia, RN-Video..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 05-22-2024
 ---
 
@@ -15,8 +15,6 @@ Although it's unlikely to calm down because 2 major confs start tomorrow:
 - App.js Conf, also with great React Native announcements expected.
 
 Have a good read and see you next week!
-
-*   🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) -  Portland, OR - July 17-19. The U.S. React Native Conference is back with engaging talks and hands-on workshops! Get 15% off your ticket with code “TWIR”
 
 <!-- truncate -->
 
