--- a/website/newsletter/187/index.mdx
+++ b/website/newsletter/187/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /187
 title: "This Week In React #187: Next.js, Expo, Popover, rethrow, SWR, React-Query, Astro, PPR, tRPC, zsa, Memory leaks, INP, RN IDE, Skia, WebGPU, RNSC, Atlas, Re.Pack, Prisma, SwiftUI, Flutter, Angular..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 05-29-2024
 ---
 
