--- a/website/newsletter/181/index.mdx
+++ b/website/newsletter/181/index.mdx
@@ -13,6 +13,8 @@ After 2D with Skia, it's super excitings to see React Native devs exploring the 
 
 **💡 [Check this newsletter on Twitter](https://slo.im/thread) - visual format 🎨**
 
+<!-- truncate -->
+
 ---
 
 import Support from "../_support.mdx";
