--- a/website/newsletter/184/index.mdx
+++ b/website/newsletter/184/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /184
 title: "This Week In React #184: Patching, Expo, React Aria, Headless UI, Strict Mode, DevTools, Next.js, Mitosis, Twofold, Terminosaurus, Docusaurus, MST, Remix-SaaS, VisionCamera, Reanimated, VisionOS, Apollo, Vite, Node, Hono ..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 05-08-2024
 ---
 
