Add RN mastery ad link

--- a/website/newsletter/188/index.mdx
+++ b/website/newsletter/188/index.mdx
@@ -70,7 +70,7 @@ Future-proof your auth stack with [WorkOS](https://workos.com/?utm_source=thiswe
 
 This section is authored by [Benedikt](https://twitter.com/bndkt).
 
-<Todo />
+- 💸 [React Native Mastery - The only course you need to Master React Native & Expo](https://notjust.dev/react-native-mastery?utm_source=twir&utm_medium=email)
 
 ---
 
