--- a/website/newsletter/188/index.mdx
+++ b/website/newsletter/188/index.mdx
@@ -101,6 +101,6 @@ Many roads lead to Rome, and it seems there are almost as many ways to build an 
 
 <Todo />
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![Thank you JavaScript](/emails/issues/188/fun188.jpg)](https://x.com/fireship_dev/status/1796526654183059925)
 
 See ya! 👋
