--- a/website/newsletter/188/index.mdx
+++ b/website/newsletter/188/index.mdx
@@ -42,6 +42,9 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
+📜 **[Data Fetching Patterns in Single-Page Applications](https://martinfowler.com/articles/data-fetch-spa.html)**
+This is a long read (~10k words), but such a great article! The title doesn’t do its justice, because in passing, this covers so much more than just data fetching. Basic React concepts, Suspense, async state handling, code splitting, prefetching, and parallel data fetching to avoid waterfalls. There has been a lot of discussion on X about web app performance in the last few weeks (Rails vs. React, MS Edge decision, …) - this is a great article to freshen up the basics of this topic to build a great user experience!
+
 - 💸 [Meilisearch - Build search as you type for React](https://www.meilisearch.com/with/react?utm_campaign=sponsoring&utm_source=thisweekinreact)
 - 🐦 [shadcn/ui is working on adding charts](https://x.com/shadcn/status/1795920488797188525)
 - 🐦 [Remix working inside a Cloudflare Durable Object 🤯](https://x.com/threepointone/status/1796223745243119890)
@@ -92,7 +95,7 @@ This section is authored by [Benedikt](https://twitter.com/bndkt).
 
 ![Simon Grimm: Build React Native with Expo](/emails/issues/188/rn188.jpg)
 
-🎥 [Every Way to Build your React Native App with Expo](https://www.youtube.com/watch?v=cs-zgHjt5RQ)
+🎥 **[Every Way to Build your React Native App with Expo](https://www.youtube.com/watch?v=cs-zgHjt5RQ)**
 Many roads lead to Rome, and it seems there are almost as many ways to build an Expo app. This gives us developers a lot of power and freedom, but can also sometimes lead to confusion - not just for beginners! Thankfully, Simon made a great video comparing the different approaches via Expo Go, Expo Prebuild, Xcode, Android Studio, and EAS. This is also a great opportunity to congratulate Expo on reaching [30k stars on GitHub!](https://x.com/expo/status/1796262781584654492)
 
 - 💸 [React Native Mastery - The only course you need to Master React Native & Expo](https://notjust.dev/react-native-mastery?utm_source=twir&utm_medium=email)
