--- a/website/newsletter/188/index.mdx
+++ b/website/newsletter/188/index.mdx
@@ -65,6 +65,7 @@ This is a long read (~10k words), but such a great article! The title doesn’t 
 - 🎥 [Stephanie Dietz - How to Use React's `useOptimistic` Hook](https://www.youtube.com/watch?v=ChF9-P4Bjs4)
 - 🎥 [UI Engineering - Why 95% of Modals should be Local (in React)](https://www.youtube.com/watch?v=iMoAviG_ZUE)
 - 🎥 [Laravel vs React](https://www.youtube.com/watch?v=gRtv-BVkwA4)
+- 🎥 [How React Query Won](https://www.youtube.com/watch?v=xIflplz925Y)
 
 <SubscribeFormEmbed placement="middle" />
 
