--- a/website/newsletter/188/index.mdx
+++ b/website/newsletter/188/index.mdx
@@ -107,7 +107,7 @@ Many roads lead to Rome, and it seems there are almost as many ways to build an 
 - 📦 [React Native 0.74.2](https://github.com/facebook/react-native/releases/tag/v0.74.2): Patch release, bumping some dependencies (typescript-eslint, CLI) and fixing bugs.
 - 📦 [React Native Reanimated 3.12.0](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.12.0): Introduces a new hook useComposedEventHandler which simplifies merging of multiple event handlers.
 - 🎙️ [RNR 298 - Create Expo Stack, NativeWind Ul, & Plugin Pro with Dan Stepanov](https://reactnativeradio.com/episodes/rnr-298-create-expo-stack-nativewind-ul-plugin-pro-with-dan-stepanov)
-- 🎥 [React Native is alive! App.js Recap with Áron Berezkin | Rocket Ship 042](http://app.js)
+- 🎥 [React Native is alive! App.js Recap with Áron Berezkin | Rocket Ship 042](https://www.youtube.com/watch?v=GeUfrojkoo0)
 
 ---
 
