--- a/website/newsletter/188/index.mdx
+++ b/website/newsletter/188/index.mdx
@@ -1,8 +1,8 @@
 ---
 slug: /188
-title: "This Week In React #188: Remix in CF DO, React 19 RC0, Spline, Data Fetching Patterns, Astro, Zod, Memory Leaks, Module Mocking, Slow Networks, Docusaurus, MS Edge, RN Security Guide, RN 0.74.2, Reanimated 3.12"
+title: "This Week In React #188: React 19 RC0, Data Fetching, Framer Motion, Compiler, Astro, Zod, Remix, Docusaurus, Spline, Memory Leaks, Module Mocking, Slow Networks, MS Edge, RN Security Guide, RN 0.74.2, Reanimated 3.12, Turborepo..."
 authors: [bndkt]
-date: 05-06-2024
+date: 06-06-2024
 unlisted: true
 ---
 
